# steamworks-rs

./: .gitattributes  Cargo.toml  Drakefile.ts  Makefile.toml  README.md  RELEASE.md  Taskfile.yml  crates.js  help.html  release.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: main.yml
implementors/bitflags/traits/: trait.Flags.js  trait.PublicFlags.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/snafu/: trait.ErrorCompat.js
src/: callbacks.rs  lib.rs  string_ext.rs  testing.rs
src/callbacks/: mod.rs  persona_state_change.rs
src/steam/: common.rs  mod.rs  remote_storage.rs  ugc.rs  user_stats.rs
src/steamworks/: lib.rs.html  string_ext.rs.html
steamworks/: all.html  enum.InitError.html  enum.SteamResult.html  index.html  sidebar-items.js  struct.AppId.html  struct.Client.html  struct.SteamId.html
steamworks-sys/: Cargo.toml  build.rs  wrapper.hpp
steamworks-sys/src/: lib.cpp  lib.rs
steamworks/callbacks/: index.html  sidebar-items.js  struct.PersonaStateChange.html  struct.PersonaStateChangeFlags.html
steamworks/error/: enum.InitError.html
steamworks/remote_storage/: enum.UgcDownloadToLocationError.html  index.html  sidebar-items.js  struct.DownloadUGCResult.html  struct.UgcHandle.html
steamworks/ugc/: enum.MatchingUgcType.html  enum.PublishedFileVisibility.html  enum.QueryAllUgcError.html  enum.QueryType.html  enum.WorkshopFileType.html  index.html  sidebar-items.js  struct.PublishedFileId.html  struct.QueryAllUgc.html  struct.Tags.html  struct.UgcDetails.html
steamworks/user_stats/: enum.FindLeaderboardError.html  index.html  sidebar-items.js  struct.LeaderboardEntry.html  struct.LeaderboardHandle.html  struct.LeaderboardScoreUploaded.html  struct.UploadLeaderboardScoreError.html
tests/: trivial.rs
(+73 files in other folders)
