[package]
name = "steamworks"
version = "0.0.25"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
atomic = "0.5"
az = "1"
bitflags = "1"
chrono = "0.4"
derive_more = "0.99"
enum-primitive-derive = "0.2"
fnv = "1"
genawaiter = { version = "0.99", features = ["futures03"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-intrusive = "0.5"
num-traits = "0.2"
once_cell = "1"
parking_lot = "0.12"
slotmap = "1"
snafu = "0.7"
static_assertions = "1"
steamworks-sys = { path = "./steamworks-sys" }
tracing = "0.1"
